--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,76 @@
-
+aiohttp==3.8.6
+aiosignal==1.3.1
+alembic==1.12.1
+anyio==3.7.1
+async-timeout==4.0.3
+attrs==23.1.0
+bidict==0.22.1
+certifi==2023.7.22
+charset-normalizer==3.3.2
+click==8.1.7
+cloudpickle==2.2.1
+dataclasses-json==0.6.1
+exceptiongroup==1.1.3
+faiss-cpu==1.7.4
+fastapi==0.96.1
+frozenlist==1.4.0
+greenlet==3.0.1
+gunicorn==20.1.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.4
+Jinja2==3.1.2
+jsonpatch==1.33
+jsonpointer==2.4
+langchain==0.0.329
+langsmith==0.0.56
+Mako==1.2.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+marshmallow==3.20.1
+mdurl==0.1.2
+multidict==6.0.4
+mypy-extensions==1.0.0
+numpy==1.26.1
+openai==0.28.1
+packaging==23.2
+pipdeptree==2.13.0
+platformdirs==3.11.0
+psutil==5.9.6
+pydantic==1.10.13
+Pygments==2.16.1
+PyPDF2==3.0.1
+python-dotenv==1.0.0
+python-engineio==4.8.0
+python-multipart==0.0.5
+python-socketio==5.10.0
+PyYAML==6.0.1
+redis==4.6.0
 reflex==0.3.1
+regex==2023.10.3
+requests==2.31.0
+rich==13.6.0
+simple-websocket==1.0.0
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==1.4.41
+sqlalchemy2-stubs==0.0.2a36
+sqlmodel==0.0.8
+starlette==0.27.0
+starlette-admin==0.9.0
+tabulate==0.9.0
+tenacity==8.2.3
+tiktoken==0.5.1
+tqdm==4.66.1
+typer==0.4.2
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+urllib3==2.0.7
+uvicorn==0.20.0
+watchdog==2.3.1
+watchfiles==0.19.0
+websockets==10.4
+wrapt==1.15.0
+wsproto==1.2.0
+yarl==1.9.2
